# rules_rust

./: WORKSPACE.bazel
.bazelci/: presubmit.yml
bindgen/private/: bindgen.bzl
cargo/cargo_build_script_runner/: bin.rs
cargo/private/: cargo_build_script.bzl  cargo_build_script_wrapper.bzl
cargo/private/cargo_toml_info/: main.rs
crate_universe/: extension.bzl
crate_universe/private/: crate.bzl
crate_universe/src/: config.rs  lockfile.rs  select.rs
crate_universe/src/context/: crate_context.rs
docs/: flatten.md  rust_doc.md
docs/src/: flatten.md  rust.md
examples/lints/: BUILD.bazel
examples/lints/hello_world/: Cargo.toml
examples/lints/hello_world/src/: lib.rs
rust/: defs.bzl  toolchain.bzl
rust/private/: clippy.bzl  rust.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl  utils.bzl
rust/settings/: BUILD.bazel
test/unit/lint_flags/: Cargo.toml  lint_flags_test.bzl
test/unit/lint_flags/sub_project/: Cargo.toml
test/unit/lint_flags/sub_project_workspace/: Cargo.toml
tools/rustdoc/: rustdoc_test_writer.rs
util/process_wrapper/: main.rs  options.rs
